Bug 730424 - window.applicationCache.status not getting updated when resources finish loading, r=michal